Added how to use Ollama with LangChain

--- a/notebooks/benchmate_v003.ipynb
+++ b/notebooks/benchmate_v003.ipynb
@@ -60,7 +60,35 @@
     "\n",
     "Well, we now  have a use case!\n",
     "\n",
-    "**So, let's get started!**"
+    "**Let's first scope our project!**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "629376fb",
+   "metadata": {},
+   "source": [
+    "## Scope\n",
+    "\n",
+    "Our goal is to create an AI research assistant. For now, let's not be too ambituous and aim for a PhD level research assistant. Let's aim for a research assistant that can create highscool level reports based on the subject matter provided by the user.\n",
+    "\n",
+    "First, let's understand how a highschooler would go about creating a report. On that basis, we can define what steps an AI flow should contain in its pipeline.\n",
+    "\n",
+    "Steps for a human to create a school report:\n",
+    "1. Select a topic\n",
+    "2. Break the report down into subtopics by identifying key elements\n",
+    "3. Find references on each subtopic and create notes\n",
+    "4. Create the final report by summarize the notes on each topic into sections within the report\n",
+    "\n",
+    "In our flow, the user will be providing the topic as an input, so we do not have to be concerned with the AI selecting the topic. Additionally, we may want the user to provide the number of subtopics they are looking for. So we will accept that as an input to the pipeline as well.\n",
+    "\n",
+    "**Sumamry:**\n",
+    "\n",
+    "Input: Topic Name, Number of Subtopics\n",
+    "\n",
+    "Output: Highschool Level Report\n",
+    "\n",
+    "**Now that we have an understanding of how we want to proceed, let's get started!**"
    ]
   },
   {
@@ -79,7 +107,7 @@
     "## Ollama\n",
     "\n",
     "First and foremost, while working with LLMs, we obviously need an LLM that we can call and get a response from. For this, there are multiple options:\n",
-    "1. We can either proprietary models (ex. GPT, Claude, Gemini, etc.) - This has an associated cost as each call will incur an expense\n",
+    "1. We can either use proprietary models (ex. GPT, Claude, Gemini, etc.) - This has an associated cost as each call will incur an expense\n",
     "2. We can run open-source LLMs on our own system - This won't incur any costs but the models are not as powerful and latency is higher\n",
     "\n",
     "For the purpose of this notebook, let's go with option 2 for now."
@@ -98,7 +126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "id": "cfa6503a",
    "metadata": {},
    "outputs": [],
@@ -111,31 +139,62 @@
     "response = chat(model='llama3.2:latest', messages=[\n",
     "  {\n",
     "    'role': 'user',\n",
-    "    'content': 'Who was Alan Turing',\n",
+    "    'content': 'Generate a highscool level report on the history of the internet with 3 suptopics',\n",
     "  },\n",
     "])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "id": "18d532d7",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "'Alan Mathison Turing (1912-1954) was a British mathematician, computer scientist, logician, philosopher, and cryptographer who made significant contributions to the development of computer science, artificial intelligence, and cryptography. He is widely considered one of the most influential scientists of the 20th century.\\n\\nEarly Life and Education:\\n\\nTuring was born in Maida Vale, London, England, to a family of intellectuals. His father was a bank manager, and his mother was a homemaker. Turing was a brilliant student at Sherborne School and later at King\\'s College, Cambridge, where he studied mathematics and logic.\\n\\nContributions:\\n\\n1. **Computer Science:** Turing is often credited with inventing the concept of the theoretical Turing machine, which is the foundation of modern computer science. He also made significant contributions to the development of the Automatic Computing Engine (ACE), a precursor to the modern computer.\\n2. **Codebreaking:** During World War II, Turing worked at the Government Code and Cypher School (GC&CS) at Bletchley Park, where he led a team that cracked the German Enigma code. This effort is credited with saving thousands of lives by providing vital intelligence about German military operations.\\n3. **Artificial Intelligence:** Turing\\'s work on the ACE machine laid the foundation for modern artificial intelligence. He proposed the idea of a \"thinking machine\" and developed the concept of the universal Turing machine, which is still studied in AI research today.\\n4. **Philosophy:** Turing was also interested in philosophy, particularly the nature of intelligence, consciousness, and the mind-body problem.\\n\\nPersonal Life:\\n\\nTuring\\'s personal life was marked by controversy. In 1952, he was arrested and charged with gross indecency for having a relationship with a man, which was illegal in the UK at the time. He was given a choice between imprisonment or chemical castration (a treatment that would reduce his libido). Turing chose the latter.\\n\\nDeath:\\n\\nTuring died on June 7, 1954, at the age of 41, from cyanide poisoning, which he had ingested while working in his lab. The official cause of death was ruled as accidental, but many believe it was a deliberate act by someone who knew about Turing\\'s work and wanted to silence him.\\n\\nLegacy:\\n\\nTuring\\'s legacy is profound and far-reaching. He has inspired generations of scientists, engineers, and philosophers, and his work continues to influence computer science, artificial intelligence, cryptography, and philosophy today.\\n\\nIn recognition of his contributions, Turing was posthumously awarded the Royal Society\\'s Albert Medal in 1959. In 2009, he was recognized as a pioneer in the development of computer science by the British government, and his legacy has been celebrated with various tributes and commemorations around the world.'"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "**The History of the Internet**\n",
+      "\n",
+      "**I. The Early Years: ARPANET and the Birth of the Internet (1960s-1980s)**\n",
+      "\n",
+      "The internet as we know it today was born in the 1960s, when the United States Department of Defense's Advanced Research Projects Agency (ARPA) funded a project to create a network of computers that could communicate with each other. This project, called ARPANET, was designed to enable researchers and scientists to share information and collaborate on projects.\n",
+      "\n",
+      "In 1969, the first message was sent over ARPANET, from a computer at UCLA to a computer at Stanford Research Institute (SRI). The network was initially used by government agencies and universities, but it quickly expanded to include other networks and institutions.\n",
+      "\n",
+      "In the 1980s, the Internet Protocol (IP) was developed, which allowed different networks to communicate with each other and form a single, unified network. This marked the beginning of the modern internet as we know it today.\n",
+      "\n",
+      "**II. The World Wide Web and the Rise of the Internet (1990s-2000s)**\n",
+      "\n",
+      "In 1989, British computer scientist Tim Berners-Lee invented the World Wide Web (WWW), which revolutionized the way people accessed and shared information online. The WWW was a system of interlinked hypertext documents that could be accessed via the internet.\n",
+      "\n",
+      "The web quickly gained popularity, and by the mid-1990s, it had become a major part of everyday life. The development of graphical user interfaces (GUIs), such as Mosaic and Netscape, made it easy for people to navigate and use the web.\n",
+      "\n",
+      "In the 2000s, social media platforms like Facebook, Twitter, and LinkedIn became increasingly popular, changing the way people communicated and interacted online.\n",
+      "\n",
+      "**III. The Modern Internet: Social Media, Cloud Computing, and Emerging Technologies (2010s-Present)**\n",
+      "\n",
+      "In the 2010s, the internet continued to evolve with the rise of social media, cloud computing, and emerging technologies like big data analytics and artificial intelligence (AI).\n",
+      "\n",
+      "Social media platforms like Instagram, Snapchat, and TikTok became incredibly popular, changing the way people consumed and shared information online.\n",
+      "\n",
+      "Cloud computing enabled companies to store and process data remotely, making it more accessible and convenient for users.\n",
+      "\n",
+      "Emerging technologies like AI, blockchain, and the Internet of Things (IoT) are transforming industries and revolutionizing the way we live and work.\n",
+      "\n",
+      "Today, the internet is a global network that has transformed modern society. From its humble beginnings as ARPANET to its current status as a global network, the internet has had a profound impact on our lives and continues to shape our future.\n",
+      "\n",
+      "**Sources:**\n",
+      "\n",
+      "* \"A Brief History of the Internet\" by Smithsonian Magazine\n",
+      "* \"The World Wide Web: A Biography\" by Ciaran Jenkins\n",
+      "* \"The Internet and Social Media\" by Pew Research Center\n"
+     ]
     }
    ],
    "source": [
     "# Displaying the response\n",
-    "response['message']['content'] "
+    "print(response['message']['content'])"
    ]
   },
   {
@@ -201,12 +260,160 @@
     "\n",
     "*Generated using Gemini*\n",
     "\n",
-    "*(Note: There are deffinitely more reasons to utilize LangChain, especially when we need to rely on chain-of-though prompting, but we can look into those reasons later)*"
+    "*(Note: There are deffinitely more reasons to utilize LangChain, especially when we need to rely on chain-of-though prompting, but we can look into those reasons later)*\n",
+    "\n",
+    "LangChain allows for partners to contribute to the library to build a \"client\" for their LLM ([see here](https://github.com/langchain-ai/langchain/tree/master/libs/partners)). To see the source code of a partner, click on: *<parner_name>* / langchain_*<parner_name>* / llms.py \n",
+    "\n",
+    "(example for Ollama: ollama / langchain_ollama / [llms.py](https://github.com/langchain-ai/langchain/blob/master/libs/partners/ollama/langchain_ollama/llms.py))\n",
+    "\n",
+    "Most of the LLM Clients are built using the BaseLLM class from langchain_core.\n",
+    "\n"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "2742fcdf",
+   "id": "65245cae",
+   "metadata": {},
+   "source": [
+    "## Ollama with LangChain\n",
+    "\n",
+    "Let us try, getting a response from the locally running Ollama instance using the LangChain library!"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "4f17e510",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from langchain_ollama.llms import OllamaLLM\n",
+    "\n",
+    "# Importing OllamaLLM from LangChain - the LLM client for Ollama:\n",
+    "model = OllamaLLM(model=\"llama3.2:latest\", run_local=True)\n",
+    "\n",
+    "# Calling the LLM\n",
+    "response = model.invoke(\"Generate a highscool level report on the history of the internet with 3 suptopics\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "7a76d0ad",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "**The Evolution of the Internet: A Decade-by-Decade Overview**\n",
+      "\n",
+      "**Topic 1: The Birth and Early Years of the Internet (1960s-1980s)**\n",
+      "\n",
+      "The internet has its roots in the United States Department of Defense's Advanced Research Projects Agency (ARPA). In the 1960s, ARPA funded a project called ARPANET, which aimed to create a network of computers that could communicate with each other. The first message sent over ARPANET was on October 29, 1969, from a computer at UCLA to one at Stanford Research Institute (SRI). In the 1970s and 1980s, other networks such as the National Science Foundation Network (NSFNET) and the Internet Protocol (IP) were developed. These early networks laid the foundation for the modern internet.\n",
+      "\n",
+      "**Topic 2: The World Wide Web and Netscape (1990s)**\n",
+      "\n",
+      "In 1989, British computer scientist Tim Berners-Lee invented the World Wide Web, a system of interlinked hypertext documents that could be accessed via web browsers. This innovation revolutionized the way people accessed information on the internet. In the mid-1990s, Netscape Communications Corporation developed the first commercially successful web browser, Netscape Navigator. This marked the beginning of the widespread adoption of the internet by consumers and businesses alike.\n",
+      "\n",
+      "**Topic 3: The Modern Internet Era (2000s-Present)**\n",
+      "\n",
+      "In the early 2000s, the internet underwent significant changes with the rise of social media platforms such as Facebook (2004), Twitter (2006), and YouTube (2005). These platforms transformed the way people communicate, access information, and share content. The widespread adoption of mobile devices in the late 2000s further accelerated the growth of the internet. Today, the internet is an integral part of modern life, with billions of users worldwide relying on it for communication, education, entertainment, and commerce.\n",
+      "\n",
+      "**Key Takeaways:**\n",
+      "\n",
+      "* The internet has its roots in the 1960s, when ARPA funded ARPANET.\n",
+      "* The World Wide Web was invented by Tim Berners-Lee in 1989, revolutionizing information access.\n",
+      "* The modern internet era began with the rise of social media platforms and mobile devices.\n",
+      "\n",
+      "**Timeline:**\n",
+      "\n",
+      "* 1960s: ARPANET project begins\n",
+      "* 1970s-1980s: Other networks such as NSFNET and IP are developed\n",
+      "* 1989: World Wide Web is invented by Tim Berners-Lee\n",
+      "* 1990s: Netscape Navigator becomes commercially successful\n",
+      "* 2000s: Social media platforms and mobile devices become widespread\n",
+      "* 2010s: Internet of Things (IoT) and big data analytics emerge as key trends\n",
+      "\n",
+      "**Sources:**\n",
+      "\n",
+      "* \"A Brief History of the Internet\" by Tim Berners-Lee\n",
+      "* \"The Internet's Early Years\" by NSFNET\n",
+      "* \"Netscape Navigator: The First Commercial Web Browser\"\n",
+      "* \"The Rise of Social Media\" by Pew Research Center\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Displaying the response\n",
+    "print(response)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4d5bacce",
+   "metadata": {},
+   "source": [
+    "**Amazing! We just used the LangChain wrapper for Ollama!**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "26c9ddd9",
+   "metadata": {},
+   "source": [
+    "## LangChain: Prompt Templates\n",
+    "\n",
+    "But what if we want to repeat the process for differnet topics?\n",
+    "\n",
+    "For example, we want one report on \"The History of the Internet\" with 3 subtopics and we also want a report on \"The History of Formula 1\" with 5 subtopics."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1a8f1ad5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "## LangChain: Prompt Templates"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a6d65274",
+   "metadata": {},
+   "source": [
+    "Note:\n",
+    "\n",
+    "We are seeing responses from the LLM, but keep in mind, a Large Language Model simply \"predicts\" what the next set of words should be based on the prompt. These predictions are based off of the large pool of textual data the LLM would've been trained on.\n",
+    "\n",
+    "The problem with the content being generated as a prediction is that we don't know which words are predicted incorrectly. An important fact could've been a mis-prediction resulting in what we call a **hallucination**.\n",
+    "\n",
+    "We also don't have any references within the pool of training data which is informing the prediction. So, we do not have anything to cross-reference the facts.\n",
+    "\n",
+    "How do we fix this problem?\n",
+    "\n",
+    "One way would be to provide the LLM"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b2caadd9",
+   "metadata": {},
+   "source": [
+    "# Step 2: Creating Subtopics"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a2d87441",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4cfd41be",
    "metadata": {},
    "source": []
   }
