Added Prompt Templates and Issues with Predicted Text

--- a/notebooks/benchmate_v003.ipynb
+++ b/notebooks/benchmate_v003.ipynb
@@ -364,19 +364,99 @@
    "source": [
     "## LangChain: Prompt Templates\n",
     "\n",
-    "But what if we want to repeat the process for differnet topics?\n",
+    "What do we do if we want to repeat the process for differnet topics?\n",
     "\n",
-    "For example, we want one report on \"The History of the Internet\" with 3 subtopics and we also want a report on \"The History of Formula 1\" with 5 subtopics."
+    "For example, we want one report on \"The History of the Internet\" with 3 subtopics and we also want a report on \"The History of Formula 1\" with 5 subtopics.\n",
+    "\n",
+    "The straight forward solution is to manually type the same prompt again and again. However, if we want to use this process as an automated pipeline, we cannot rely on manually entering the prompt.\n",
+    "\n",
+    "What we need is a feature offered by LangChain called Prompt Templates."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "1a8f1ad5",
    "metadata": {},
    "outputs": [],
    "source": [
-    "## LangChain: Prompt Templates"
+    "# Importing PromptTemplate from LangChain\n",
+    "from langchain_core.prompts import PromptTemplate\n",
+    "\n",
+    "# Creating a prompt template for generating reports using the from_template method\n",
+    "report_prompt = PromptTemplate.from_template(\"Generate a highschool level report on {topic} with {subtopics} subtopics\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "fa4d0bcf",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "StringPromptValue(text='Generate a highschool level report on The History of the Internet with 3 subtopics')"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# We can invoke the prompt template with specific values for the placeholders\n",
+    "report_prompt.invoke({\"topic\": \"The History of the Internet\", \"subtopics\": 3})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "2e3d1b1f",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Generate a highschool level report on The History of the Internet with 3 subtopics'"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# The invoke fuunction returns a StringPromptValue object- the \"text\" parameter is a string with the placeholders replaced by the provided values\n",
+    "report_prompt.invoke({\"topic\": \"The History of the Internet\", \"subtopics\": 3}).text"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f36e5187",
+   "metadata": {},
+   "source": [
+    "Now, it becomes easy to create multiple prompts using this template"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "266a414c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Generate a highschool level report on The History of the Internet with 3 subtopics\n",
+      "Generate a highschool level report on The History of Formula 1 with 5 subtopics\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(report_prompt.invoke({\"topic\": \"The History of the Internet\", \"subtopics\": 3}).text)\n",
+    "print(report_prompt.invoke({\"topic\": \"The History of Formula 1\", \"subtopics\": 5}).text)"
    ]
   },
   {
@@ -384,7 +464,7 @@
    "id": "a6d65274",
    "metadata": {},
    "source": [
-    "Note:\n",
+    "## Issues with Preticted Text\n",
     "\n",
     "We are seeing responses from the LLM, but keep in mind, a Large Language Model simply \"predicts\" what the next set of words should be based on the prompt. These predictions are based off of the large pool of textual data the LLM would've been trained on.\n",
     "\n",
