Started the 'Creating Subtopics' section

--- a/notebooks/benchmate_v003.ipynb
+++ b/notebooks/benchmate_v003.ipynb
@@ -275,7 +275,7 @@
    "id": "65245cae",
    "metadata": {},
    "source": [
-    "## Ollama with LangChain\n",
+    "## LangChain: LLM Classes (OllamaLLM)\n",
     "\n",
     "Let us try, getting a response from the locally running Ollama instance using the LangChain library!"
    ]
@@ -375,7 +375,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 2,
    "id": "1a8f1ad5",
    "metadata": {},
    "outputs": [],
@@ -470,11 +470,21 @@
     "\n",
     "The problem with the content being generated as a prediction is that we don't know which words are predicted incorrectly. An important fact could've been a mis-prediction resulting in what we call a **hallucination**.\n",
     "\n",
-    "We also don't have any references within the pool of training data which is informing the prediction. So, we do not have anything to cross-reference the facts.\n",
+    "What makes these hallucinations hard to spot? Well, there are two major reasons:\n",
+    "1. LLMs do not inherently know what parts of predicted text are incorrect and hence all output is presented as facts with equal confidence - as there is no tonal difference between correct and incorrect facts, it can be hard to ditiguish truth from hallucination\n",
+    "2. By default, we also are not presented with any references from where, or specifically from which document in the training data, the \"predicted text\" is being informed from so it becomes a big task to cross-verify all facts\n",
     "\n",
     "How do we fix this problem?\n",
     "\n",
-    "One way would be to provide the LLM"
+    "One way would be to provide the LLM with particular reference documents as context and ask the LLM to answer questions or perform summarization tasks only from the provided context. This way, we limit the scope of what documents we must reference in order to cross-validate the response provided by the LLM.\n",
+    "\n",
+    "**Next Steps:**\n",
+    "\n",
+    "So we will provide the LLM with the context it should reference its information from. Now, how can we get the information to form the context?\n",
+    "\n",
+    "Well, we can extract the information from webpages (via websearch) and provide this information as context. Awesome! But do we just search the whole topic and feed the LLM with the text from hundereds of links? That seems excessive. Also, especially if we are using proprietary LLMs, this would shoot the costs up by a lot. Let us try to be more targeted.\n",
+    "\n",
+    "We can first ask the LLM to provide us the headings of the report (or subtopics). With each of these subtopics, we can perform more targeted information gathering exercise. Let's ask the LLM to provide us with potential subtopics for a report if it is provided a topic."
    ]
   },
   {
@@ -489,13 +499,69 @@
    "cell_type": "markdown",
    "id": "a2d87441",
    "metadata": {},
-   "source": []
+   "source": [
+    "Let's first create a prompt template for getting subtopics. The template should accept the topic name as one of the inputs and the number of subtopics the LLM is expected to return as another input."
+   ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": 3,
    "id": "4cfd41be",
    "metadata": {},
-   "source": []
+   "outputs": [],
+   "source": [
+    "# Creating a prompt template for generating subtopics with detailed descriptions\n",
+    "# Response will be in JSON format\n",
+    "subtopics_prompt = PromptTemplate.from_template(\n",
+    "    \"\"\"Generate a list of {number_of_subtopics} subheadings for a highschool essay on {topic}.\n",
+    "    Order the subheadings such that they have a logical sequence.\n",
+    "    Each subheading should be accompanied with a detailed discription on what the contents should be about.\n",
+    "    Provide output in json format as follows:\n",
+    "\n",
+    "    {{'<heading1>':'<description1>',\n",
+    "    '<heading2>':'<description2>',...}}\n",
+    "    \n",
+    "    Only return the json object without any additional text.\"\"\"\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "9d82e439",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Generate a list of 3 subheadings for a highschool essay on The History of the Internet.\n",
+      "    Order the subheadings such that they have a logical sequence.\n",
+      "    Each subheading should be accompanied with a detailed discription on what the contents should be about.\n",
+      "    Provide output in json format as follows:\n",
+      "\n",
+      "    {'<heading1>':'<description1>',\n",
+      "    '<heading2>':'<description2>',...}\n",
+      "    \n",
+      "    Only return the json object without any additional text.\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(subtopics_prompt.invoke({\"topic\": \"The History of the Internet\", \"number_of_subtopics\": 3}).text)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f4309ba4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Creating an OllamaLLM client that returns responses in JSON format\n",
+    "# The 'format' parameter is set to 'json' to ensure the response is in JSON\n",
+    "json_model = OllamaLLM(model=\"llama3.2:latest\", run_local=True, format='json')"
+   ]
   }
  ],
  "metadata": {
